activation of all api calls/minor css

--- a/css/landscape.css
+++ b/css/landscape.css
@@ -442,9 +442,9 @@
   .news-info-section-translate {
     transform: translateY(0%);
   }
-  .news-info-section h3 {
+  /* .news-info-section h3 {
     text-align: center;
-  }
+  } */
   #news-info-header {
     width: 50%;
     margin-left: auto;
@@ -470,8 +470,8 @@
   }
   .news-description {
     font-size: 1.2rem;
-    float: right;
-    width: 65%;
+    /* float: right;
+    width: 65%; */
     padding-left: 1%;
   }
 
