--- a/css/landscape.css
+++ b/css/landscape.css
@@ -446,16 +446,21 @@
     text-align: center;
   } */
   #news-info-header {
-    width: 50%;
+    font-family: "Playfair Display", serif;
+    font-weight: 900;
+    font-size: 3rem;
+    width: 80%;
     margin-left: auto;
     margin-right: auto;
   }
-  #news-div {
+  /* #news-div {
     margin-top: 14%;
-  }
+  } */
+
   .news-articles {
     display: flex;
     flex-wrap: wrap;
+    border-bottom: gray solid 2px;
   }
   .news-image {
     width: 35%;
@@ -466,9 +471,12 @@
     color: black;
   }
   .news-title {
+    font-family: "Playfair Display", serif;
+    font-weight: 700;
     font-size: 1.6rem;
   }
   .news-description {
+    font-family: "Droid Serif", serif;
     font-size: 1.2rem;
     /* float: right;
     width: 65%; */
@@ -682,9 +690,9 @@
 		box-shadow: 0px 0px 8px 2px grey;
 		border-radius: 3%; */
   }
-  #news-div {
+  /* #news-div {
     margin-top: 7%;
-  }
+  } */
 }
 
 /* DESKTOP */
